# pluto-airband

./: .gitignore  BUILD.md  DEV-SETUP.md  PROGRESS.md  README.md  SPEC.md  SPUR-INVESTIGATION.md  feeds.json  pluto-airband-fpga.md  requirements-dev.lock.txt  requirements-dev.txt
deploy/: README.md  airband-alert.sh  airband-alert@.service  airband-feeds.env.example  airband-feeds.service  airband-watchdog-selftest.sh  airband-watchdog.service  airband-watchdog.sh
firmware/: README.md  airband.json  apply_airband_devicetree.py  apply_mac_devicetree.py  apply_sdcard_devicetree.py  build_bitstream.sh  build_firmware.sh  build_firmware_full.sh  patch_dropbear_persist.py  patch_maia_logging.py  patch_maia_respawn.py  patch_maia_supervisor.py  patch_sdcard_mount.py  patch_tx_quiet.py  pluto_setup_env.py  serial_check.py
firmware/diagnostics/: README.md  ab_audio_chains.py  analyze_ch_audio.py  band_snapshot.py  buzz_capture.py  buzz_meter.py  clock_shift_test.py  comb_vs_lo.py  design_voice_fir.py  dsp_chain_sim.py  floor_sweep.py  gain_sweep.py  gain_sweep_clip.py  iq_envelope.py  lo_band_am.py  lo_track_test.py  lte_calibrate.py  measure_offset.py  samplerate_spur_test.py  spur_classify.py  term_tests.py  wideband_spectrum.py
hdl/: README.md  am_audio.py  am_backend_tdm.py  am_demod.py  audio_framer.py  capture_window.py  channelizer_chain.py  channelizer_core.py  channelizer_lane.py  ddc_tune_decimate.py  diag_cadence.py  emit_core_verilog.py  feasibility_25ch.py  ooc_place.tcl  ooc_synth.tcl  realtime_budget.py  receiver_top.py  synth_estimate.py  test_dma_cyclic.py
host/: Cargo.toml
host/airband-dfn/: Cargo.toml
host/airband-dfn/src/: lib.rs
host/airband-dsp/: Cargo.toml
host/airband-dsp/src/: agc.rs  denoise.rs  filter.rs  flatness.rs  lib.rs  squelch.rs
host/airband-listen/: Cargo.toml
host/airband-listen/src/: dfn.rs  filter.rs  main.rs
host/airband-monitor/: .gitignore  README.md  pyproject.toml
host/airband-monitor/src/airband_monitor/: __init__.py  app.py  cli.py  plan.py  stream.py
host/airband-monitor/tests/: test_core.py
host/airband-reader/: Cargo.toml
host/airband-reader/src/: feeds.rs  icecast.rs  main.rs  metrics.rs  monitor.rs  mqtt.rs
host/airband-tune/: Cargo.toml  README.md
host/airband-tune/src/: main.rs
