[package]
name = "airband-listen"
version = "0.1.0"
edition = "2021"
description = "Interactive live listener for the Pluto airband framed-audio stream"
license = "MIT OR Apache-2.0"

[[bin]]
name = "airband-listen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rodio = { version = "0.19", default-features = false }

[profile.release]
lto = true
