[package]
name = "airband-reader"
version = "0.1.0"
edition = "2021"
description = "Host-side reader for the Pluto airband framed-audio DMA stream"
license = "MIT OR Apache-2.0"

[[bin]]
name = "airband-reader"
path = "src/main.rs"

[dependencies]
airband-dsp = { path = "../airband-dsp" }
airband-dfn = { path = "../airband-dfn" }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
mp3lame-encoder = "0.2.4"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
